crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__load_ambiguous_library_across_apps_produces_s121_with_candidates.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load utils %}

Diagnostics (1)
1. LibraryNotInInstalledApps: Template tag library 'utils' requires 'app_a' in INSTALLED_APPS
    --> test.html:1:1
    candidates: ["app_a", "app_b"]
   1 | {% load utils %}
     | ^^^^^^^^^^^^^^^^
