crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__load_env_unavailable_falls_through_to_s120.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load nonexistent %}

Diagnostics (1)
1. UnknownLibrary: Unknown template tag library 'nonexistent'
    --> test.html:1:1
   1 | {% load nonexistent %}
     | ^^^^^^^^^^^^^^^^^^^^^^
