crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__load_library_in_env_but_not_installed_apps_produces_s121.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load humanize %}

Diagnostics (1)
1. LibraryNotInInstalledApps: Template tag library 'humanize' requires 'django.contrib.humanize' in INSTALLED_APPS
    --> test.html:1:1
    candidates: ["django.contrib.humanize"]
   1 | {% load humanize %}
     | ^^^^^^^^^^^^^^^^^^^
