crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__load_selective_import_env_library_produces_s121.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load intcomma from humanize %}

Diagnostics (1)
1. LibraryNotInInstalledApps: Template tag library 'humanize' requires 'django.contrib.humanize' in INSTALLED_APPS
    --> test.html:1:1
    candidates: ["django.contrib.humanize"]
   1 | {% load intcomma from humanize %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
