crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__load_tag_itself_not_flagged.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load i18n %}

Diagnostics (0)
