crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__load_truly_unknown_library_still_s120_with_env.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load totallyunknown %}

Diagnostics (1)
1. UnknownLibrary: Unknown template tag library 'totallyunknown'
    --> test.html:1:1
   1 | {% load totallyunknown %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^
