crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__loaded_library_tag_no_error.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load i18n %}
   2 | {% trans 'hello' %}

Diagnostics (0)
