crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__multi_library_load_each_validated.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load i18n nonexistent %}

Diagnostics (1)
1. UnknownLibrary: Unknown template tag library 'nonexistent'
    --> test.html:1:1
   1 | {% load i18n nonexistent %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
