crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__multi_load_mixed_env_and_unknown.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load i18n humanize xyz %}

Diagnostics (2)
1. LibraryNotInInstalledApps: Template tag library 'humanize' requires 'django.contrib.humanize' in INSTALLED_APPS
    --> test.html:1:1
    candidates: ["django.contrib.humanize"]
   1 | {% load i18n humanize xyz %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

2. UnknownLibrary: Unknown template tag library 'xyz'
    --> test.html:1:1
   1 | {% load i18n humanize xyz %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
