crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__non_opaque_blocks_validated_normally.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% if True %}{% trans 'hello' %}{% endif %}

Diagnostics (1)
1. UnloadedTag: Tag 'trans' requires {% load i18n %}
    --> test.html:1:14
   1 | {% if True %}{% trans 'hello' %}{% endif %}
     |              ^^^^^^^^^^^^^^^^^^^
